--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-nextjs-starter-kit",
+  "name": "nextjs-socialdev",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -11,6 +11,10 @@
   "dependencies": {
     "next": "^12.0.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.6"
   }
 }
