--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
-    "axios": "^0.26.0",
+    "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "iron-session": "^6.0.5",
     "joi": "^17.6.0",
+    "moment": "^2.29.1",
     "mongoose": "^6.2.4",
     "next": "^12.0.7",
     "next-connect": "^0.12.2",
@@ -21,7 +22,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.6"
